Implemented having 409 show up in description update field

--- a/src/app/components/articles/quest-article/quest-article.component.html
+++ b/src/app/components/articles/quest-article/quest-article.component.html
@@ -47,6 +47,7 @@
             <app-textfield 
             [initialText]="articleData.description"
             [heading]="'Description'"
+            [formStateSubject]="textfieldFormStateSubject"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
         </div>
