--- a/src/app/components/articles/creature-article/creature-article.component.html
+++ b/src/app/components/articles/creature-article/creature-article.component.html
@@ -23,6 +23,7 @@
             <app-textfield 
             [initialText]="articleData.description"
             [heading]="'Description'"
+            [formStateSubject]="textfieldFormStateSubject"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
         </div>
