--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -60,6 +60,7 @@
             <app-textfield 
             [initialText]="articleData.description"
             [heading]="'Description'"
+            [formStateSubject]="textfieldFormStateSubject"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
         </div>
