--- a/src/app/components/articles/organization-article/organization-article.component.html
+++ b/src/app/components/articles/organization-article/organization-article.component.html
@@ -54,6 +54,7 @@
             <app-textfield 
             [initialText]="articleData.description"
             [heading]="'Description'"
+            [formStateSubject]="textfieldFormStateSubject"
             (updateText)="onDescriptionUpdate($event)"
             ></app-textfield>
         </div>
