Added background stripes to compare form

--- a/src/app/components/utility/display-form-container/display-form-container.component.scss
+++ b/src/app/components/utility/display-form-container/display-form-container.component.scss
@@ -2,4 +2,11 @@
     color: var(--white);
     background-color: transparent;
     border-color: var(--white);
+    background: repeating-linear-gradient(
+        45deg, 
+        hsl(210, 23%, 20%), 
+        hsl(210, 23%, 20%) 10px, 
+        hsl(210, 23%, 25%) 10px, 
+        hsl(210, 23%, 25%) 20px,
+    );
 }
