Found better solution for compare form

--- a/src/app/components/utility/compare-form-container/compare-form-container.component.html
+++ b/src/app/components/utility/compare-form-container/compare-form-container.component.html
@@ -4,10 +4,8 @@
         While you were updating this article, somebody else went ahead and updated it as well. Please include their changes in your update before submitting.
     </div>
 
-    <div [ngClass]="{'row': !displayVertically, 'card': displayVertically}">
+    <div class="row">
         <div class="col-12" [ngClass]="{'col-sm-6': !displayVertically}">
-            <!-- This has this ngclass because the spacing of the p-3 is necessary when putting forms side by side, 
-                when put verticall it just wastes space -->
             <div>
                 <h3> Server Version </h3>
                 <app-display-form-container
@@ -18,10 +16,8 @@
         </div>
 
         <hr class="white-separator" *ngIf="displayVertically">
-    
+        
         <div class="col-12" [ngClass]="{'col-sm-6': !displayVertically}">
-            <!-- This has this ngclass because the spacing of the p-3 is necessary when putting forms side by side, 
-                when put verticall it just wastes space -->
             <div>
                 <h3> Your Version </h3>
                 <app-formly-formcontainer
