Updated a button for consistency

--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -14,7 +14,7 @@
             <form [formGroup]="form" (submit)="onSubmit(modal)">
                 <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
                 <div class="btn btn-secondary mr-3" (click)="modal.close()">Cancel</div>
-                <button type="submit" class="btn btn-secondary">Submit</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
         <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
