Implemented "Awesome Marker"-like markers
The package awesome-markers used to get font-awesome icons on leaflet markers just does not work. You can however get close with your own CSS classes on a DIV-icon. Shamelessly stolen from https://www.geoapify.com/create-custom-map-marker-icon/

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,34 @@ $marker-width: 100px;
 	background-color: transparent;
 }
 
+
+.marker-pin {
+	width: 30px;
+	height: 30px;
+	border-radius: 50% 50% 50% 0;
+	background: #c30b82;
+	position: absolute;
+	transform: rotate(-45deg);
+	left: 50%;
+	top: 50%;
+	margin: -15px 0 0 -15px;
+  }
+  
+  // to align icon
+  .custom-div-icon i {
+	 position: absolute;
+	 width: 22px;
+	 font-size: 22px;
+	 left: 0;
+	 right: 0;
+	 margin: 10px auto;
+	 text-align: center;
+  }
+
+  .awesome{
+	  color: black;
+  }
+
 /* Leaflet CSS */
 @import "~leaflet/dist/leaflet.css";
 
