--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -17,7 +17,7 @@
                
                 <!-- Article Name -->
                 <div class="col-md-4 text-center">
-                        <h5><strong>{{article.name}}</strong></h5>
+                        <h5 class="mb-0"><strong>{{article.name}}</strong></h5>
                 </div>
                 
                 <!-- Article Text -->
