Added session audio recordings to sidebar legend

--- a/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
+++ b/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
@@ -42,9 +42,15 @@
                     </div>
                 </div>
 
-                <div class="col-lg-1 col-sm-3 col-4 mb-3">
+                <div class="col-lg-2 col-sm-3 col-4 mb-3">
                     <div class="sidebar-border" [ngClass]="coloredSidebar('quest')">
                         <span class="mx-1"> Quest </span>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-3 col-4 mb-3">
+                    <div class="sidebar-border" [ngClass]="coloredSidebar('sessionaudio')">
+                        <span class="mx-1"> Recordings </span>
                     </div>
                 </div>
 
