Fixed display bug for encounters with no location

--- a/src/app/components/articles/encounter/encounter.component.html
+++ b/src/app/components/articles/encounter/encounter.component.html
@@ -13,7 +13,7 @@
             </div>
 
             <!-- Encounter Location -->
-            <div class="row">
+            <div class="row" *ngIf = "articleData.location_details" >
                 <span class="col-md-3 col-6 bold">Location: </span>
                 <span class="col-md-3 col-6">
                     <a 
