Added an "alive" indicator to character page

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -11,6 +11,7 @@
             <h1 class="text-center subheading col">
                 <span *ngIf="articleData.title">{{ articleData.title }} - </span>
                 {{ articleData.name }}
+                <span *ngIf="articleData.alive"> (†) </span>
             </h1>
         </div>
 
