Refined the less-space-waste rule

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -570,7 +570,7 @@ button{
 	}
 
 	//In general make drop-down cards (e.g. rules, spells) un-padded to reduce space waste
-	.card.row.px-4{
+	.card.px-4{
 		padding-left: 0 !important;
 		padding-right: 0 !important;
 	}
