Fixed visual issue with quote overview icon on mobile

--- a/src/app/components/utility/quotefield/quotefield.component.html
+++ b/src/app/components/utility/quotefield/quotefield.component.html
@@ -101,7 +101,7 @@
 
             <!-- Hyperlink to Quote Overview -->
             <i 
-            class="fa fa-th-list fa-1-5x icon mx-3" 
+            class="fa fa-th-list fa-1-5x icon mr-3" 
             title="See all quotes" 
             routerLink="{{ routingService.getRoutePath('quote-overview', {name: character.name}) }}"
             *ngIf="enableLinkToOverview"
