Added some type annotation

--- a/src/app/components/utility/formly-datepicker/formly-datepicker.component.html
+++ b/src/app/components/utility/formly-datepicker/formly-datepicker.component.html
@@ -19,6 +19,7 @@
         ngbDatepicker 
         #datepickerInput="ngbDatepicker"
         (dateSelect)="inputDateToField($event)"
+        type="text"
         >
         <div class="input-group-append">
             <div class="btn btn-outline-light fa fa-calendar" (click)="datepickerInput.toggle()"></div>
