Made sidebar legend interactable if set to do so

--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -5,7 +5,9 @@
             <h1 class="text-center col">Search Results</h1>
          </div>
 
-         <app-colored-sidebar-legend></app-colored-sidebar-legend>
+         <app-colored-sidebar-legend 
+         [interactable]="true"
+         ></app-colored-sidebar-legend>
          
         <!-- Article List -->
         <div class="my-3">
