Added search option filtering

--- a/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
+++ b/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
@@ -8,7 +8,7 @@
                 >
                     <i class="fa fa-times mr-2" *ngIf="articleOptions[option]"></i>
                     <div class="sidebar-border" [ngClass]="coloredSidebar(option.toLowerCase())">
-                        <span class="mx-1"> {{option}} </span>
+                        <span class="mx-1"> {{option | titlecase}} </span>
                     </div>
                 </div>
                 
