--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -7,6 +7,7 @@
 
          <app-colored-sidebar-legend 
          [interactable]="true"
+         (onFilterOptionSelect)="filterOptions = $event"
          ></app-colored-sidebar-legend>
          
         <!-- Article List -->
@@ -14,7 +15,8 @@
             <a 
             routerLink="{{ article.getAbsoluteRouterUrl() }}" 
             *ngFor="let article of articles"
-            [ngClass]="'card flex-row align-items-center sidebar-border py-2 row mh-60px ' + sidebarColor(article.article_type)"
+            class="card flex-row align-items-center sidebar-border py-2 row mh-60px {{sidebarColor(article.article_type)}}"
+            [ngClass]="{'d-none': filterOptions.length > 0 && !filterOptions.includes(article.article_type)}"
             >
                
                 <!-- Article Name -->
