Added way to automatically open the first char in the filtered list by pressing enter

--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <!-- Filter Bar -->
-        <form autocomplete="off" class="row">
+        <form autocomplete="off" class="row" (submit)="openFirstArticle(filter.value)">
             <input
             type="text"
             id="filter_input"
