--- a/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
+++ b/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
@@ -3,10 +3,10 @@
                 <div 
                 *ngFor="let option of getArticleOptionNames()" 
                 class="col-lg-2 col-sm-3 col-6 py-2 d-flex align-items-center" 
-                [ngClass]="{'hover-highlight pointer': interactable, 'highlight': articleOptions[option]}"
+                [ngClass]="{'hover-highlight pointer': interactable, 'highlight': filterSettings[option]}"
                 (click)="selectArticleOption(option)"
                 >
-                    <i class="fa fa-times mr-2" *ngIf="articleOptions[option]"></i>
+                    <i class="fa fa-times mr-2" *ngIf="filterSettings[option]"></i>
                     <div class="sidebar-border" [ngClass]="coloredSidebar(option.toLowerCase())">
                         <span class="mx-1"> {{option | titlecase}} </span>
                     </div>
