Added id to searchbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,6 +27,7 @@
                 type="search" 
                 name="search" 
                 title="search"
+                id="search"
                 [(ngModel)]="searchString" 
                 placeholder="Search Articles..." 
                 aria-label="Search">
