Added colors to Rules and spells and migrated the definition for the sidebar into styles.scss

--- a/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.scss
+++ b/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.scss
@@ -1,5 +1,5 @@
 .sidebar-border{
-    border-left: solid 5px;
+    border-left: solid 10px;
 }
 
 .yellow{
@@ -40,4 +40,12 @@
 
 .orange{
     border-left-color: orange;
+}
+
+.violet{
+    border-left-color: violet;
+}
+
+.beige{
+    border-left-color: var(--beige);
 }
