Changed/Updated Recently-updated/Search page color palette

--- a/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.scss
+++ b/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.scss
@@ -6,20 +6,20 @@
     border-left-color: yellow;
 }
 
-.darkpink{
-    border-left-color: #ca0263;
+.lightgreen{
+    border-left-color: lightgreen;
 }
 
 .lightpink{
-    border-left-color: #f293a4;
+    border-left-color: #ee8600;
 }
 
 .brown{
-    border-left-color: brown;
+    border-left-color:#b7410e;
 }
 
 .blue{
-    border-left-color: blue;
+    border-left-color: #4169e1;
 }
 
 .black{
@@ -38,14 +38,42 @@
     border-left-color: darkgreen;
 }
 
+.darkgreen{
+    border-left-color: #2f4a36;
+}
+
 .orange{
     border-left-color: orange;
 }
 
 .violet{
-    border-left-color: violet;
+    border-left-color: #9871D2;
+}
+
+.purple{
+    border-left-color: #5d3754;
 }
 
 .beige{
     border-left-color: var(--beige);
+}
+
+.teal{
+	border-left-color: #1cd2c0;
+}
+
+.darkpink{
+    border-left-color: #b03060
+}
+
+.red{
+    border-left-color: #bc0f0f;
+}
+
+.darkred{
+    border-left-color: #92000A;
+}
+
+.darkyellow{
+	border-left-color: #e6ae25;
 }
