--- a/src/styles.scss
+++ b/src/styles.scss
@@ -307,8 +307,8 @@ h2{
     border-left-color: yellow;
 }
 
-.darkpink{
-    border-left-color: #ca0263;
+.lightgreen{
+    border-left-color: lightgreen;
 }
 
 .lightpink{
@@ -316,11 +316,11 @@ h2{
 }
 
 .brown{
-    border-left-color: brown;
+    border-left-color: #b7410e;
 }
 
 .blue{
-    border-left-color: blue;
+    border-left-color: #4169e1;
 }
 
 .black{
@@ -340,17 +340,44 @@ h2{
 }
 
 .orange{
-    border-left-color: orange;
+    border-left-color: #ee8600;
 }
 
 .violet{
-    border-left-color: violet;
+    border-left-color: #9871D2;
 }
 
 .beige{
     border-left-color: var(--beige);
 }
 
+.teal{
+	border-left-color: #1cd2c0;
+}
+
+.darkpink{
+    border-left-color: #b03060
+}
+
+.red{
+    border-left-color: #bc0f0f;
+}
+
+.darkgreen{
+    border-left-color: #2f4a36;
+}
+
+.purple{
+    border-left-color: #5d3754;
+}
+
+.darkred{
+    border-left-color: #92000A;
+}
+
+.darkyellow{
+	border-left-color: #e6ae25;
+}
 
 // For Article Pages
 .delete-request{
