Fixed incorrect sidebar and rules styling and filtering

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -308,11 +308,11 @@ h2{
 }
 
 .lightpink{
-    border-left-color: #f293a4;
+    border-left-color: #ee8600;
 }
 
 .brown{
-    border-left-color: #b7410e;
+    border-left-color:#b7410e;
 }
 
 .blue{
@@ -335,12 +335,20 @@ h2{
     border-left-color: darkgreen;
 }
 
+.darkgreen{
+    border-left-color: #2f4a36;
+}
+
 .orange{
-    border-left-color: #ee8600;
+    border-left-color: orange;
 }
 
 .violet{
     border-left-color: #9871D2;
+}
+
+.purple{
+    border-left-color: #5d3754;
 }
 
 .beige{
@@ -357,14 +365,6 @@ h2{
 
 .red{
     border-left-color: #bc0f0f;
-}
-
-.darkgreen{
-    border-left-color: #2f4a36;
-}
-
-.purple{
-    border-left-color: #5d3754;
 }
 
 .darkred{
