Set parameter warningmessage in template of generic disable field instead of message of a validator

--- a/src/app/components/utility/formly-select-disable/formly-select-disable.component.html
+++ b/src/app/components/utility/formly-select-disable/formly-select-disable.component.html
@@ -28,7 +28,7 @@
         </option>
     </select>
     <div class="mywarningmessage" *ngIf="hasInvalidOptionSelected()">
-        The option you selected is not valid with the rest of your selected values.
+        {{ to.warningMessage }}
     </div>
 </div>
 
